# pjatk-asi

./: .gitignore  README.md  docker-compose.yaml
api/: .dockerignore  .gitignore  Dockerfile  main.py  requirements.txt  test_recommender.py
asi/: .gitignore  README.md  pyproject.toml  requirements.txt  retrain_pipeline.py  test_recommender.py
asi-old/: pyproject.toml
asi-old/conf/: logging.yml
asi-old/conf/base/: catalog.yml
asi-old/src/asi/: __init__.py  __main__.py  pipeline_registry.py  settings.py
asi-old/src/asi/pipelines/data_preparation/: nodes.py  pipeline.py
asi/conf/base/: catalog.yml  parameters_prediction.yml
asi/src/asi/: __main__.py  pipeline_registry.py  settings.py
asi/src/asi/pipelines/data_preparation/: nodes.py  pipeline.py
asi/src/asi/pipelines/modelling/: nodes.py  pipeline.py
asi/tests/pipelines/prediction/: test_pipeline.py
frontend/: Dockerfile  main.py  requirements.txt
